--- a/QRCodeScannerGenerator/MainWindow.xaml
+++ b/QRCodeScannerGenerator/MainWindow.xaml
@@ -121,10 +121,12 @@
                 </Grid.RowDefinitions>
 
                 <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch">
-                    <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="35" Content="{DynamicResource ResourceKey=Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBox Grid.Column="1" Grid.Row="0" x:Name="QRText_Generate" Margin="45 0 240 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" KeyUp="QRText_Generate_KeyUp"/>
-                    <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Margin="0 0 125 0" Width="105" Click="ButtonGenerate_Click"></Button>
-                    <Button Grid.Column="3" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Margin="0 0 10 0" Width="105" Click="ButtonSave_Click"></Button>
+                    <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="50" Content="{DynamicResource ResourceKey=Type}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    <ComboBox Grid.Column="1" Grid.Row="0" Margin="50 0" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="comboBox_Generate_Type" SelectionChanged="comboBox_Generate_Type_SelectionChanged"/>
+                    <Label Grid.Column="2" Grid.Row="0" Margin="160 0" Width="35" Content="{DynamicResource ResourceKey=Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    <TextBox Grid.Column="3" Grid.Row="0" x:Name="QRText_Generate" Margin="200 0 190 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" KeyUp="QRText_Generate_KeyUp"/>
+                    <Button Grid.Column="4" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 100 0" Width="80" Click="ButtonGenerate_Click"></Button>
+                    <Button Grid.Column="5" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="80" Click="ButtonSave_Click"></Button>
                 </Grid>
 
                 <WindowsFormsHost Grid.Row="1" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost2" Background="White"/>
