--- a/QRCodeScannerGenerator/MainWindow.xaml
+++ b/QRCodeScannerGenerator/MainWindow.xaml
@@ -101,8 +101,8 @@
                 </Grid>
                 <Grid Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
                     <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="105" Content="{DynamicResource ResourceKey=LastScannedText}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBox Grid.Column="1" Grid.Row="0" x:Name="QRText_Scan" Margin="125 0 120 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
-                    <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Margin="0 0 10 0" Width="100" Click="ButtonOpen_Click"></Button>
+                    <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Scan" Margin="125 0 120 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
+                    <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Margin="0 0 10 0" Width="100" Click="ButtonOpenUrl_Click"></Button>
                 </Grid>
                 <WindowsFormsHost Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost1" Background="White"/>
             </Grid>
