--- a/QRCodeScannerGenerator/MainWindow.xaml
+++ b/QRCodeScannerGenerator/MainWindow.xaml
@@ -79,74 +79,9 @@
 
         </Grid>
         <Grid Grid.Column="1" Grid.Row="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" x:Name="GridContent">
-            <Grid x:Name="ScanQR" Visibility="Hidden">
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition  Height="40" />
-                    <RowDefinition  Height="40" />
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-
-                <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch">
-                    <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="50" Content="{DynamicResource ResourceKey=Camera}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <ComboBox Grid.Column="1" Grid.Row="0" Margin="70 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Devices" SelectionChanged="comboBox_Devices_SelectionChanged"/>
-                </Grid>
-                <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch">
-                    <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="50" Content="{DynamicResource ResourceKey=Type}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <ComboBox Grid.Column="1" Grid.Row="0" Margin="50 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Scan_Type" SelectionChanged="comboBox_Scan_Type_SelectionChanged"/>
-                </Grid>
-                <Grid Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
-                    <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="105" Content="{DynamicResource ResourceKey=LastScannedText}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Scan" Margin="125 0 120 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
-                    <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Margin="0 0 10 0" Width="100" Click="ButtonOpenUrl_Click"></Button>
-                </Grid>
-                <WindowsFormsHost Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost1" Background="White"/>
-            </Grid>
-            <Grid x:Name="GenerateQR" Visibility="Hidden">
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition  Height="40" />
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-
-                <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch">
-                    <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="50" Content="{DynamicResource ResourceKey=Type}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <ComboBox Grid.Column="1" Grid.Row="0" Margin="50 0" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="comboBox_Generate_Type" SelectionChanged="comboBox_Generate_Type_SelectionChanged"/>
-                    <Label Grid.Column="2" Grid.Row="0" Margin="160 0" Width="35" Content="{DynamicResource ResourceKey=Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBox Grid.Column="3" Grid.Row="0" x:Name="QRText_Generate" Margin="200 0 190 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" KeyUp="QRText_Generate_KeyUp"/>
-                    <Button Grid.Column="4" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 100 0" Width="80" Click="ButtonGenerate_Click"></Button>
-                    <Button Grid.Column="5" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="80" Click="ButtonSave_Click"></Button>
-                </Grid>
-
-                <WindowsFormsHost Grid.Row="1" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost2" Background="White"/>
-            </Grid>
-            <Grid x:Name="Settings">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="4*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition  Height="40" />
-                    <RowDefinition  Height="40" />
-                    <RowDefinition  Height="40" />
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-
-                <CheckBox Grid.Row="0" Grid.Column="0" Name="checkBox_HideToTrayOnMinimize" Margin="10 0" Content="Hide to tray on minimize" Click="checkBox_HideToTrayOnMinimize_Click"></CheckBox>
-                <CheckBox Grid.Row="1" Grid.Column="0" Name="checkBox_HideToTrayOnClose" Margin="10 0" Content="Hide to tray on close" Click="checkBox_HideToTrayOnClose_Click"></CheckBox>
-
-                <Grid Grid.Row="2" Grid.Column="0" HorizontalAlignment="Stretch">
-                    <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="55" Content="{DynamicResource ResourceKey=Browser}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <ComboBox Grid.Column="1" Grid.Row="0" Margin="75 0 0 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Browsers" SelectionChanged="comboBox_Browsers_SelectionChanged"/>
-                </Grid>
-            </Grid>
+            <local:ScanWidget x:Name="ScanWidget"></local:ScanWidget>
+            <local:GenerateWidget x:Name="GenerateWidget"></local:GenerateWidget>
+            <local:SettingsWidget x:Name="SettingsWidget"></local:SettingsWidget>
         </Grid>
     </Grid>
 </Window>
