--- a/QRCodeScannerGenerator/ScanWidget.xaml
+++ b/QRCodeScannerGenerator/ScanWidget.xaml
@@ -30,6 +30,6 @@
             <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Scan" Margin="125 0 120 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
             <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Margin="0 0 10 0" Width="100" Click="ButtonOpenUrl_Click"></Button>
         </Grid>
-        <WindowsFormsHost Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost1" Background="White"/>
+        <local:VideoPreviewWidget x:Name="VideoPreviewWidget" Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></local:VideoPreviewWidget>
     </Grid>
 </UserControl>
