--- a/QRCodeScannerGenerator/GenerateWidget.xaml
+++ b/QRCodeScannerGenerator/GenerateWidget.xaml
@@ -14,18 +14,38 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition  Height="40" />
+            <RowDefinition  Height="40" />
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Margin="0 10 0 0" HorizontalAlignment="Stretch">
+        <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch">
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition x:Name="HeightColumnDefinition" Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            
             <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="50" Content="{DynamicResource ResourceKey=Type}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <ComboBox Grid.Column="1" Grid.Row="0" Margin="50 0" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="comboBox_Generate_Type" SelectionChanged="comboBox_Generate_Type_SelectionChanged"/>
-            <Label Grid.Column="2" Grid.Row="0" Margin="160 0" Width="35" Content="{DynamicResource ResourceKey=Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="3" Grid.Row="0" x:Name="Text_Generate" Margin="200 0 190 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" KeyUp="Text_Generate_KeyUp"/>
-            <Button Grid.Column="4" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 100 0" Width="80" Click="ButtonGenerate_Click"></Button>
-            <Button Grid.Column="5" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="80" Click="ButtonSave_Click"></Button>
+            <ComboBox Grid.Column="0" Grid.Row="0" Margin="50 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Generate_Type" SelectionChanged="comboBox_Generate_Type_SelectionChanged"/>
+            <Label Grid.Column="1" Grid.Row="0" Margin="10 0" Width="45" Content="Width:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Width_Generate" Margin="60 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" PreviewTextInput="NumericOnly" KeyUp="Width_Generate_KeyUp"/>
+            <Grid x:Name="HeightColumn" Grid.Column="2" Grid.Row="0">
+                <Label Margin="10 0" Width="45" Content="Height:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <TextBox x:Name="Height_Generate" Margin="60 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" PreviewTextInput="NumericOnly" KeyUp="Height_Generate_KeyUp"/>
+            </Grid>
         </Grid>
 
-        <WindowsFormsHost Grid.Row="1" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost2" Background="White"/>
+        <Grid Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch">
+            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="35" Content="{DynamicResource ResourceKey=Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Generate" Margin="50 0 190 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" KeyUp="Text_Generate_KeyUp"/>
+            <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 100 0" Width="80" Click="ButtonGenerate_Click"></Button>
+            <Button Grid.Column="3" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="80" Click="ButtonSave_Click"></Button>
+        </Grid>
+
+        <WindowsFormsHost Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost2" Background="White"/>
     </Grid>
 </UserControl>
