--- a/CodeScannerGenerator/ScanWidget.xaml
+++ b/CodeScannerGenerator/ScanWidget.xaml
@@ -27,8 +27,9 @@
         </Grid>
         <Grid Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
             <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="105" Content="{DynamicResource ResourceKey=LastScannedText}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Scan" Margin="125 0 120 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
-            <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Margin="0 0 10 0" Width="100" Click="ButtonOpenUrl_Click"></Button>
+            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Scan" Margin="125 0 200 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
+            <Button Grid.Column="2" Grid.Row="0" Content="Copy" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 100 0" Width="80" Click="ButtonCopy_Click"></Button>
+            <Button Grid.Column="3" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="80" Click="ButtonOpenUrl_Click"></Button>
         </Grid>
         <local:VideoPreviewWidget x:Name="VideoPreviewWidget" Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></local:VideoPreviewWidget>
     </Grid>
