--- a/CodeScannerGenerator/GenerateWidget.xaml
+++ b/CodeScannerGenerator/GenerateWidget.xaml
@@ -28,22 +28,48 @@
             <Grid.RowDefinitions>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            
-            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="50" Content="{DynamicResource ResourceKey=Type}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <ComboBox Grid.Column="0" Grid.Row="0" Margin="50 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Generate_Type" SelectionChanged="comboBox_Generate_Type_SelectionChanged"/>
-            <Label Grid.Column="1" Grid.Row="0" Margin="10 0" Width="45" Content="Width:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Width_Generate" Margin="60 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" PreviewTextInput="NumericOnly" KeyUp="Width_Generate_KeyUp"/>
+
+            <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=Type}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <ComboBox Grid.Column="1" Grid.Row="0" Margin="0 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Generate_Type" SelectionChanged="comboBox_Generate_Type_SelectionChanged"/>
+            </Grid>
+
+            <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=Width}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <TextBox Grid.Column="1" Grid.Row="0" x:Name="Width_Generate" Margin="0 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" PreviewTextInput="NumericOnly" KeyUp="Width_Generate_KeyUp"/>
+            </Grid>
             <Grid x:Name="HeightColumn" Grid.Column="2" Grid.Row="0">
-                <Label Margin="10 0" Width="45" Content="Height:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                <TextBox x:Name="Height_Generate" Margin="60 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" PreviewTextInput="NumericOnly" KeyUp="Height_Generate_KeyUp"/>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=Height}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <TextBox Grid.Column="1" Grid.Row="0" x:Name="Height_Generate" Margin="0 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" PreviewTextInput="NumericOnly" KeyUp="Height_Generate_KeyUp"/>
             </Grid>
         </Grid>
 
         <Grid Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch">
-            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="35" Content="{DynamicResource ResourceKey=Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Generate" Margin="50 0 190 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" KeyUp="Text_Generate_KeyUp"/>
-            <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 100 0" Width="80" Click="ButtonGenerate_Click"></Button>
-            <Button Grid.Column="3" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="80" Click="ButtonSave_Click"></Button>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            
+            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Generate" Margin="0 0 10 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" KeyUp="Text_Generate_KeyUp"/>
+            <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 110 0" Width="90" Click="ButtonGenerate_Click"></Button>
+            <Button Grid.Column="3" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="90" Click="ButtonSave_Click"></Button>
         </Grid>
 
         <WindowsFormsHost Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost2" Background="White"/>
