--- a/CodeScannerGenerator/ScanWidget.xaml
+++ b/CodeScannerGenerator/ScanWidget.xaml
@@ -18,18 +18,34 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch">
-            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="50" Content="{DynamicResource ResourceKey=Camera}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <ComboBox Grid.Column="1" Grid.Row="0" Margin="70 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Devices" SelectionChanged="comboBox_Devices_SelectionChanged"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            
+            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=Camera}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" Grid.Row="0" Margin="0 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Devices" SelectionChanged="comboBox_Devices_SelectionChanged"/>
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch">
-            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="50" Content="{DynamicResource ResourceKey=Type}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <ComboBox Grid.Column="1" Grid.Row="0" Margin="50 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Scan_Type" SelectionChanged="comboBox_Scan_Type_SelectionChanged"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            
+            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=Type}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" Grid.Row="0" Margin="0 0 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Center" x:Name="comboBox_Scan_Type" SelectionChanged="comboBox_Scan_Type_SelectionChanged"/>
         </Grid>
         <Grid Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
-            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Width="105" Content="{DynamicResource ResourceKey=LastScannedText}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Scan" Margin="125 0 200 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
-            <Button Grid.Column="2" Grid.Row="0" Content="Copy" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 100 0" Width="80" Click="ButtonCopy_Click"></Button>
-            <Button Grid.Column="3" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="80" Click="ButtonOpenUrl_Click"></Button>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            
+            <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=LastScannedText}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Scan" Margin="0 0 10 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
+            <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=Copy}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 110 0" Width="90" Click="ButtonCopy_Click"></Button>
+            <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="90" Click="ButtonOpenUrl_Click"></Button>
         </Grid>
         <local:VideoPreviewWidget x:Name="VideoPreviewWidget" Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></local:VideoPreviewWidget>
     </Grid>
