--- a/CodeScannerGenerator/i18N/SettingsWidget.pl-PL.xaml
+++ b/CodeScannerGenerator/i18N/SettingsWidget.pl-PL.xaml
@@ -11,4 +11,5 @@
     <sys:String x:Key="HideToTrayOnClose">Ukryj do zasobnika przy zamykaniu</sys:String>
     <sys:String x:Key="RunOnStartup">Uruchom aplikację przy starcie systemu Windows</sys:String>
     <sys:String x:Key="RunMinimisedOnStartup">Uruchom zminimalizowane podczas uruchamiania systemu Windows</sys:String>
+    <sys:String x:Key="AutotypeConfimation">Potwierdź auto uzupełnianie</sys:String>
 </ResourceDictionary>
