--- a/CodeScannerGenerator/i18N/SettingsWidget.de-DE.xaml
+++ b/CodeScannerGenerator/i18N/SettingsWidget.de-DE.xaml
@@ -11,4 +11,5 @@
     <sys:String x:Key="HideToTrayOnClose">Verstecke dich im geschlossenen Zustand vor dem Systray</sys:String>
     <sys:String x:Key="RunOnStartup">Führen Sie die Anwendung beim Windows-Start aus</sys:String>
     <sys:String x:Key="RunMinimisedOnStartup">Wird beim Start von Windows minimiert ausgeführt</sys:String>
+    <sys:String x:Key="AutotypeConfimation">Automatisch eingeben bestätigen</sys:String>
 </ResourceDictionary>
